--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
 
         <div class="MainPage oneheadtext">
-            <div class="mous"></div>
+            <!-- <div class="mous"></div> -->
 
             
             <section id="home" class="section home">
