--- a/index.html
+++ b/index.html
@@ -406,8 +406,8 @@
            <div class="contact-info">
                <div class="contact-item">
                    <h3>Email</h3>
-                   <p>vyasvishal2004@gmail.com</p>
-                   <a href="mailto:vyasvishal2004@gmail.com" class="button">Write me</a>
+                   <p>vyasvishal.work@gmail.com</p>
+                   <a href="mailto:vyasvishal.work@gmail.com" class="button">Write me</a>
                </div>
                <div class="contact-item">
                    <h3>Whatsapp</h3>
