--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                <div class="contact-item">
                    <h3>Twitter</h3>
                    <p>@vyasvishal2004</p>
-                   <a href="https://twitter.com/Mohammadali2308" class="button">Write me</a>
+                   <a href="https://x.com/VyasVishal106?t=UEIVlZXDp2TpxStkIYP6Tw&s=09" class="button">Write me</a>
                </div>
            </div>
            <div class="contact-form">
